[gd_scene load_steps=8 format=3 uid="uid://3dshfiiu6peo"]

[ext_resource type="Script" path="res://addons/logic_graph/editor/editor.gd" id="1_njewq"]
[ext_resource type="PackedScene" uid="uid://c1mw3im4o8l8p" path="res://addons/logic_graph/editor/new_graph_button/new_graph_button.tscn" id="2_is6tq"]
[ext_resource type="PackedScene" uid="uid://bi2fukxfut6qo" path="res://addons/logic_graph/graph/graph.tscn" id="2_wyndc"]
[ext_resource type="PackedScene" uid="uid://gwjpyulc0pig" path="res://addons/logic_graph/editor/load_button/load_button.tscn" id="3_a7ncv"]
[ext_resource type="PackedScene" uid="uid://bbsontw3yp5dc" path="res://addons/logic_graph/editor/save_as_button/save_as_button.tscn" id="4_uyg6t"]
[ext_resource type="PackedScene" uid="uid://d1nao5m28hg0d" path="res://addons/logic_graph/editor/clear_button/clear_button.tscn" id="5_jru7q"]
[ext_resource type="PackedScene" uid="uid://dcmacsl8fulaw" path="res://addons/logic_graph/editor/close_graph_button/close_graph_button.tscn" id="6_kybo0"]

[node name="LogicGraphEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_njewq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Banner" type="PanelContainer" parent="VBoxContainer"]
self_modulate = Color(0.219608, 0.192157, 1, 1)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/Banner"]
layout_mode = 2

[node name="NewGraphButton" parent="VBoxContainer/Banner/Buttons" instance=ExtResource("2_is6tq")]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadButton" parent="VBoxContainer/Banner/Buttons" instance=ExtResource("3_a7ncv")]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/Banner/Buttons"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Save"

[node name="SaveAsButton" parent="VBoxContainer/Banner/Buttons" instance=ExtResource("4_uyg6t")]
unique_name_in_owner = true
layout_mode = 2

[node name="ClearButton" parent="VBoxContainer/Banner/Buttons" instance=ExtResource("5_jru7q")]
unique_name_in_owner = true
layout_mode = 2

[node name="CloseGraphButton" parent="VBoxContainer/Banner/Buttons" instance=ExtResource("6_kybo0")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/Banner/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OpenFileLabel" type="Label" parent="VBoxContainer/Banner/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="Graph" parent="VBoxContainer" instance=ExtResource("2_wyndc")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SaveFailedDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
dialog_text = "Failed to save logic graph"

[node name="LoadFailedDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
dialog_text = "Failed to load logic graph"

[connection signal="path_chosen" from="VBoxContainer/Banner/Buttons/NewGraphButton" to="." method="new_graph"]
[connection signal="path_chosen" from="VBoxContainer/Banner/Buttons/LoadButton" to="." method="load_graph"]
[connection signal="pressed" from="VBoxContainer/Banner/Buttons/SaveButton" to="." method="save_open_graph"]
[connection signal="path_chosen" from="VBoxContainer/Banner/Buttons/SaveAsButton" to="." method="save_graph"]
[connection signal="confirmed" from="VBoxContainer/Banner/Buttons/ClearButton" to="." method="reset_graph"]
[connection signal="confirmed" from="VBoxContainer/Banner/Buttons/CloseGraphButton" to="." method="close_graph"]
[connection signal="gui_input" from="VBoxContainer/Graph" to="." method="_on_graph_gui_input"]
[connection signal="modified" from="VBoxContainer/Graph" to="." method="mark_unsaved_changes"]
